--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,6 +105,10 @@ body.appear {
   display: block;
 }
 
+header {
+  height: var(--nav-height);
+}
+
 h1, h2, h3,
 h4, h5, h6 {
   font-family: var(--heading-font-family);
